[tool.poetry]
name = "entsoe"
version = "0.1.0"
description = ""
authors = ["Joe Nudell <jnu@stanford.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
tile-tools = "^0.1.2"
mercantile = "^1.2.1"
mapbox-vector-tile = "^2.0.1"
geopandas = "^0.12.2"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
